# features_creator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  review.md
.github/workflows/: ci-cd.yml  codecov.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/features_creator/: features_creator.py  test.ipynb
tests/: test_features_creator.py
tests/data/: sample_credit_fraud.csv
