[tool.poetry]
name = "features_creator"
version = "0.1.0"
description = "Helper functions to create new features."
authors = ["DSCI_524_GROUP26"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
